--- a/style.css
+++ b/style.css
@@ -4,66 +4,68 @@
     font-family: 'Comfortaa', cursive;
 }
 
-.topBar {
-    background-color: white;
+.background {
+    background: rgba(255, 255, 255, .5) url("images/backgroundImage.jpg");
+    background-blend-mode: lighten;
+    height: 75vh;
+    padding: 0;
+    background-repeat: no-repeat;
     background-position: center;
-    width: 100%;
+    background-size: cover;
 }
 
-.mainContent {
+#btmStrip {
+    height: 40vh;
+}
+
+.topBar {
+    background-color: white;
+    height: 10.5vh;
+    position: fixed;
     width: 100%;
-    background-size: cover;
-    position: relative;
+    text-align: center;
+}
+
+.test {
+    margin-top: 10%;
 }
 
 .logo {
-    max-width: 30%;
-    text-align: center;
     background-color: white;
-    font-size: x-large;
-    outline-color: gold;
-    outline-style: solid;
-    outline-width: 3px;
+    border: 2px solid gold;
+    text-align: center;
+    font-size: x-small;
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    max-width: 10%;
+}
+
+.imageBottom {
+    border-image: linear-gradient(to right, gold 33%, orange 33%, orange 67%, purple 67%) 5;
+    border-width: 7px;
+}
+
+.topImage {
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2%;
-}
-
-.missionStatement {
-    text-align: center;
-    font-size: x-large;
-    padding: 1% 5%;
-    line-height: 200%;
-}
-
-.message {
-    text-align: center;
-    font-size: normal;
-    padding: 1% 5%;
-    line-height: 150%;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
+    background-size: contain;
+    width: 2000px;
 }
 
 .links {
-    flex: 1;
     text-align: center;
-    padding: 1.5% 0px;
+    position: absolute;
+    width: 90%;
+    top: 5%;
+    left: 10%;
+
 }
 
-img {
-    height: auto;
-    max-width: 50%;
-}
-
-.links ul li {
-    list-style: none;
-    display: inline;
+#barlinks {
+    position: relative;
+    margin-top: 2%;
 }
 
 .links ul li a {
@@ -76,10 +78,53 @@ img {
 }
 
 .links ul li a:hover {
-    color: goldenrod;
-    background-color: rgb(235, 235, 235);
+    color: purple;
+    background-color: rgba(235, 235, 235, 0.589);
     transition: 0.5s;
 }
+
+#heading1 {
+    padding-top: 15%;
+    font-size: 5vh;
+    font-weight: bold;
+    text-align: center;
+}
+
+#heading2 {
+    padding-top: 5%;
+    font-size: 8vh;
+    font-weight: bolder;
+    text-align: center;
+}
+
+#areaHeading {
+    padding-top: 22vh;
+    font-size: 6vh;
+    font-weight: bolder;
+    text-align: center;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+}
+
+
+
+img {
+    height: auto;
+    max-width: 50%;
+}
+
+.links ul li {
+    list-style: none;
+    display: inline;
+}
+
+
 
 hr {
     border-top: .5px solid rgb(231, 218, 201);
